 * Updated OpenSSL version used in precompiled binaries (used for e.g. gem installs) to 1.0.2l (was: 1.0.2k).
 * Updated GeoIP version used in precompiled binaries (used for e.g. gem installs) to 1.6.11 (was: 1.6.9).
 * Updated PCRE version used in precompiled binaries (used for e.g. gem installs) to 8.40 (was: 8.39).


Release 5.1.5
-------------------------------

 * Updated Boost to version 1.64.0, which fixed a compilation issue on certain Gentoo based setups. Closes GH-1942.
 * Improved the error message shown when an app fails to start in time.
 * [Apache] Remove option to configure PassengerAppGroupName from .htaccess because, assuming AllowOverride Options is set, malicious users (having an account on the same server) can sometimes collide app group names of other users and capture their traffic.
 * Major internal refactoring of settings handling, to prepare for supporting settings changes without restart.


Release 5.1.4
-------------------------------

 * Updated zlib version used in building precompiled binaries (used for e.g. gem installs) to 1.2.11 (was: 1.2.8).
 * Updated openssl version used in building precompiled binaries (used for e.g. gem installs) to 1.0.2k (was: 1.0.2j).
 * Updated curl version used in building precompiled binaries (used for e.g. gem installs) to 7.54.0 (was: 7.51.0).
 * Added support for rbenv when building precompiled binaries (passenger_binary_build_automation submodule).
 * Fixes issue when building precompiled binaries (used for e.g. gem installs) found in release 5.1.3.
 * Added Ruby 2.4.1 precompiled native extension.


Release 5.1.3
-------------------------------

 * [Standalone] Fixes `install-standalone-runtime` command after regression in 5.1.2.
 * Removes unnecessary logging of "No Error" from macOS Security Update Checker.